added project name to publishVstsFeed in the NuGetCommand@2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,6 @@ steps:
   displayName: 'Publish NuGet package'
   inputs:
     command: push
-    publishVstsFeed: 'Tailspin.SpaceGame.Web.Models'
+    publishVstsFeed: 'mccomas-az400/Tailspin.SpaceGame.Web.Models'
     allowPackageConflicts: true
   condition: succeeded()
