modifed NuGetCommand@2 completely based on https://stackoverflow.com/questions/58856604/azure-devops-publish-nuget-to-hosted-feed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,9 +36,11 @@ steps:
     patchVersion: '0'
  
 - task: NuGetCommand@2
-  displayName: 'Publish NuGet package'
-  inputs:
-    command: push
-    publishVstsFeed: 'mccomas-az400/Tailspin.SpaceGame.Web.Models'
-    allowPackageConflicts: true
-  condition: succeeded()
+      displayName: 'Publish NuGet package'
+      inputs:
+        command: push
+        feedsToUse: 'select'
+        packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+        nuGetFeedType: 'internal'
+        publishVstsFeed: 'mccomas-az400/Tailspin.SpaceGame.Web.Models'
+        allowPackageConflicts: true
