Another try at resolving NuGet stanza - again

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,6 @@ steps:
     feedsToUse: 'select'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
-    publishVstsFeed: 'mccomas-az400/Tailspin.SpaceGame.Web.Models'
+    publishVstsFeed: 'Space Game - web - Dependencies/Tailspin.SpaceGame.Web.Models'
     allowPackageConflicts: true
   condition: succeeded()
